--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -26,12 +26,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/namebeyeu"
                         android:textSize="17sp"
                         android:textColor="#F3CE1919"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TÊN BÉ YÊU"/>
                     <TextView
+                        android:id="@+id/nickbeyeu"
                         android:textSize="14sp"
                         android:textColor="#A4A5AA"
                         android:layout_width="wrap_content"
@@ -39,6 +41,7 @@
                         android:text="Nickname của Bé"/>
                 </LinearLayout>
                 <ImageView
+                    android:id="@+id/imgSetting"
                     android:layout_alignParentRight="true"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
