--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -120,6 +120,7 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
+                                android:id="@+id/txtcothai"
                                 android:textColor="#1BFFAB"
                                 android:textSize="25sp"
                                 android:layout_width="wrap_content"
@@ -152,6 +153,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="CÒN LẠI:"/>
                             <TextView
+                                android:id="@+id/txtngaydu"
                                 android:layout_marginRight="5dp"
                                 android:textSize="13sp"
                                 android:textColor="#A4A5AA"
@@ -178,6 +180,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="DỰ SINH:"/>
                             <TextView
+                                android:id="@+id/txtdatedshome"
                                 android:textSize="13sp"
                                 android:textColor="#A4A5AA"
                                 android:layout_width="wrap_content"
