--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:paddingRight="10dp"
@@ -49,66 +50,70 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/ic_progress"/>
+                android:layout_height="150dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <com.github.lzyzsd.circleprogress.ArcProgress
+                        app:arc_suffix_text_padding="-17dp"
+                        app:arc_suffix_text_size="30sp"
+                        app:arc_text_size="30sp"
+                        app:arc_stroke_width="10dp"
+                        app:arc_text_color="#1BFFAB"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/arc_progress"
+                        app:arc_finished_color="#1BFFAB"
+                        app:arc_unfinished_color="#D0D1DB"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
+                        app:arc_progress="40" />
+                </RelativeLayout>
                 <LinearLayout
                     android:layout_centerInParent="true"
                     android:weightSum="2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="150dp"
                     android:orientation="horizontal">
                     <LinearLayout
+                        android:layout_gravity="center"
+                        android:layout_marginTop="18dp"
+                        android:paddingBottom="6dp"
                         android:gravity="center"
                         android:layout_weight="1"
                         android:layout_width="0dp"
-                        android:orientation="vertical"
-                        android:layout_height="match_parent">
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0%"
-                            android:textSize="25sp"
-                            android:textStyle="bold"
-                            android:textColor="#000"/>
-                        <LinearLayout
-                            android:gravity="center"
-                            android:layout_width="match_parent"
+                            android:textColor="#1BFFAB"
+                            android:layout_marginRight="5dp"
+                            android:textSize="12sp"
+                            android:text="0"/>
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="#1BFFAB"
-                                android:layout_marginRight="5dp"
-                                android:textSize="13sp"
-                                android:text="0"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="#A4A5AA"
-                                android:layout_marginRight="5dp"
-                                android:textSize="13sp"
-                                android:text="TUẦN"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="#1BFFAB"
-                                android:layout_marginRight="5dp"
-                                android:textSize="13sp"
-                                android:text="0"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="#A4A5AA"
-                                android:layout_marginRight="5dp"
-                                android:textSize="13sp"
-                                android:text="NG"/>
-                        </LinearLayout>
+                            android:textColor="#A4A5AA"
+                            android:layout_marginRight="5dp"
+                            android:textSize="12sp"
+                            android:text="TUẦN"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#1BFFAB"
+                            android:layout_marginRight="5dp"
+                            android:textSize="12sp"
+                            android:text="0"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#A4A5AA"
+                            android:layout_marginRight="5dp"
+                            android:textSize="12sp"
+                            android:text="NG"/>
                     </LinearLayout>
                     <LinearLayout
+                        android:layout_marginTop="25dp"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
