--- a/app/src/main/res/layout/frag_nickdauter.xml
+++ b/app/src/main/res/layout/frag_nickdauter.xml
@@ -27,7 +27,7 @@
                 android:src="@drawable/ic_search"/>
         </RelativeLayout>
         <EditText
-            android:id="@+id/edtsearchnickson"
+            android:id="@+id/edtsearchnickDauter"
             android:layout_gravity="center"
             android:hint="Gõ để tìm kiếm (hỗ trợ không dấu)"
             android:textColor="#000"
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
             <ImageView
+                android:id="@+id/delnickdauter"
                 android:layout_centerInParent="true"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
