--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -4,8 +4,8 @@
     xmlns:custom="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingRight="10dp"
-    android:paddingLeft="10dp"
+    android:paddingRight="7dp"
+    android:paddingLeft="7dp"
     android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         <LinearLayout
             android:paddingRight="15dp"
             android:paddingLeft="15dp"
-            android:paddingTop="15dp"
+            android:paddingTop="5dp"
             android:paddingBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,6 +27,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
+                        android:textAllCaps="true"
                         android:id="@+id/namebeyeu"
                         android:textSize="17sp"
                         android:textColor="#F3CE1919"
@@ -42,6 +43,7 @@
                         android:text="Nickname của Bé"/>
                 </LinearLayout>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:id="@+id/imgSetting"
                     android:layout_alignParentRight="true"
                     android:layout_width="20dp"
@@ -49,23 +51,25 @@
                     android:src="@drawable/ic_settings" />
             </RelativeLayout>
             <RelativeLayout
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="150dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <com.github.lzyzsd.circleprogress.ArcProgress
-                        app:arc_suffix_text_padding="-17dp"
-                        app:arc_suffix_text_size="30sp"
-                        app:arc_text_size="30sp"
+                        app:arc_suffix_text_padding="-12dp"
+                        app:arc_suffix_text_size="27sp"
+                        app:arc_text_size="27sp"
                         app:arc_stroke_width="10dp"
-                        app:arc_text_color="#1BFFAB"
+                        app:arc_text_color="#13B8AA"
                         android:layout_marginLeft="10dp"
                         android:id="@+id/arc_progress"
-                        app:arc_finished_color="#1BFFAB"
-                        app:arc_unfinished_color="#D0D1DB"
+                        app:arc_finished_color="#13B8AA"
+                        app:arc_unfinished_color="#86D5D6E0"
                         android:layout_width="130dp"
                         android:layout_height="130dp"
+                        app:arc_max="280"
                         app:arc_progress="40" />
                 </RelativeLayout>
                 <LinearLayout
@@ -76,7 +80,7 @@
                     android:orientation="horizontal">
                     <LinearLayout
                         android:layout_gravity="center"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginTop="27dp"
                         android:paddingBottom="6dp"
                         android:gravity="center"
                         android:layout_weight="1"
@@ -84,6 +88,7 @@
                         android:orientation="horizontal"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/txtWeekdate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#1BFFAB"
@@ -98,6 +103,7 @@
                             android:textSize="12sp"
                             android:text="TUẦN"/>
                         <TextView
+                            android:id="@+id/txtDaydate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#1BFFAB"
@@ -113,7 +119,7 @@
                             android:text="NG"/>
                     </LinearLayout>
                     <LinearLayout
-                        android:layout_marginTop="25dp"
+                        android:layout_marginTop="15dp"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -126,13 +132,13 @@
                             android:orientation="horizontal">
                             <TextView
                                 android:id="@+id/txtcothai"
-                                android:textColor="#1BFFAB"
+                                android:textColor="#F221DBCB"
                                 android:textSize="25sp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"/>
                             <TextView
-                                android:textColor="#1BFFAB"
+                                android:textColor="#F221DBCB"
                                 android:textSize="25sp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -226,6 +232,7 @@
                 android:layout_height="0.5dp"
                 android:background="#A4A5AA"/>
             <RelativeLayout
+                android:id="@+id/selectchitiettk"
                 android:paddingTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -250,18 +257,13 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
-                                android:textColor="#1BFFAB"
+                                android:id="@+id/txtWeightoffWeek"
+                                android:textColor="#F221DBCB"
                                 android:textSize="19sp"
                                 android:layout_marginRight="7dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0"/>
-                            <TextView
-                                android:textSize="19sp"
-                                android:textColor="#1BFFAB"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="g"/>
+                                android:text="0 g"/>
                         </LinearLayout>
                         <LinearLayout
                             android:gravity="center_horizontal"
@@ -293,7 +295,8 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
                                 <TextView
-                                    android:textColor="#1BFFAB"
+                                    android:id="@+id/txtSizeoffWeek"
+                                    android:textColor="#F221DBCB"
                                     android:textSize="19sp"
                                     android:layout_marginRight="7dp"
                                     android:layout_width="wrap_content"
@@ -301,7 +304,7 @@
                                     android:text="0"/>
                                 <TextView
                                     android:textSize="19sp"
-                                    android:textColor="#1BFFAB"
+                                    android:textColor="#F221DBCB"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="mm"/>
@@ -327,8 +330,8 @@
                             android:layout_weight="1">
                             <ImageView
                                 android:layout_gravity="center"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
                                 android:src="@drawable/ic_next"/>
                         </LinearLayout>
                     </LinearLayout>
@@ -337,7 +340,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
@@ -347,7 +349,7 @@
             android:paddingLeft="10dp"
             android:background="@android:color/transparent"
             android:text="Nhật ký của mẹ"
-            android:textColor="#1BFFAB"
+            android:textColor="#F221DBCB"
             android:drawableRight="@drawable/vector_plus"
             android:drawableLeft="@drawable/vector_picture"
             android:layout_width="match_parent"
