--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="tranparent">#00FFFDFD</color>
     <color name="purple">#C418BB</color>
     <color name="xanhtop">#1AB3A6</color>
+    <color name="xanhgreen">#26990A</color>
 
 </resources>
