--- a/app/src/main/res/layout/diary_row.xml
+++ b/app/src/main/res/layout/diary_row.xml
@@ -51,7 +51,7 @@
                     android:text="Ky"/>
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="150dp"
                     android:layout_marginTop="10dp"
                     android:id="@+id/imgDiary"/>
             </LinearLayout>
