--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -62,70 +62,85 @@
                         android:paddingTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="150dp">
-                        <RelativeLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <com.github.lzyzsd.circleprogress.ArcProgress
-                                app:arc_suffix_text_padding="-10dp"
-                                app:arc_suffix_text_size="27sp"
-                                app:arc_text_size="27sp"
-                                app:arc_stroke_width="10dp"
-                                app:arc_text_color="#13B8AA"
-                                android:layout_marginLeft="10dp"
-                                android:id="@+id/arc_progress"
-                                app:arc_finished_color="#13B8AA"
-                                app:arc_unfinished_color="#86D5D6E0"
-                                android:layout_width="130dp"
-                                android:layout_height="130dp"
-                                app:arc_max="280"
-                                app:arc_progress="40" />
-                        </RelativeLayout>
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
+                            <RelativeLayout
+                                android:gravity="center"
+                                android:layout_weight="1"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content">
+                                <com.github.lzyzsd.circleprogress.ArcProgress
+                                    app:arc_suffix_text_padding="-12dp"
+                                    app:arc_suffix_text_size="27sp"
+                                    app:arc_text_size="27sp"
+                                    app:arc_stroke_width="10dp"
+                                    app:arc_text_color="#13B8AA"
+                                    android:id="@+id/arc_progress"
+                                    app:arc_finished_color="#13B8AA"
+                                    app:arc_unfinished_color="#86D5D6E0"
+                                    android:layout_width="140dp"
+                                    android:layout_height="140dp"
+                                    app:arc_max="280"
+                                    app:arc_progress="40" />
+                            </RelativeLayout>
+                        </LinearLayout>
+
                         <LinearLayout
                             android:layout_centerInParent="true"
                             android:weightSum="2"
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
                             android:orientation="horizontal">
-                            <LinearLayout
-                                android:layout_gravity="center"
-                                android:layout_marginTop="27dp"
-                                android:paddingBottom="6dp"
-                                android:gravity="center"
+                            <RelativeLayout
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
-                                android:orientation="horizontal"
-                                android:layout_height="wrap_content">
-                                <TextView
-                                    android:id="@+id/txtWeekdate"
+                                android:layout_height="match_parent">
+                                <LinearLayout
+                                    android:layout_marginBottom="20dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_alignParentBottom="true"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="27dp"
+                                    android:paddingBottom="6dp"
+                                    android:gravity="center"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="#1BFFAB"
-                                    android:layout_marginRight="5dp"
-                                    android:textSize="12sp"
-                                    android:text="0"/>
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="#A4A5AA"
-                                    android:layout_marginRight="5dp"
-                                    android:textSize="12sp"
-                                    android:text="TUẦN"/>
-                                <TextView
-                                    android:id="@+id/txtDaydate"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="#1BFFAB"
-                                    android:layout_marginRight="5dp"
-                                    android:textSize="12sp"
-                                    android:text="0"/>
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="#A4A5AA"
-                                    android:layout_marginRight="5dp"
-                                    android:textSize="12sp"
-                                    android:text="NG"/>
-                            </LinearLayout>
+                                    android:orientation="horizontal"
+                                    android:layout_height="wrap_content">
+                                    <TextView
+                                        android:id="@+id/txtWeekdate"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#1BFFAB"
+                                        android:layout_marginRight="2dp"
+                                        android:textSize="12sp"
+                                        android:text="0"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#A4A5AA"
+                                        android:layout_marginRight="2dp"
+                                        android:textSize="12sp"
+                                        android:text="TUẦN"/>
+                                    <TextView
+                                        android:id="@+id/txtDaydate"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#1BFFAB"
+                                        android:layout_marginRight="2dp"
+                                        android:textSize="12sp"
+                                        android:text="0"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#A4A5AA"
+                                        android:layout_marginRight="2dp"
+                                        android:textSize="12sp"
+                                        android:text="NG"/>
+                                </LinearLayout>
+                            </RelativeLayout>
                             <LinearLayout
                                 android:layout_marginTop="15dp"
                                 android:layout_width="0dp"
@@ -348,6 +363,7 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <Button
