--- a/app/src/main/res/layout/dialog_cam.xml
+++ b/app/src/main/res/layout/dialog_cam.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="20dp"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:paddingHorizontal="25dp"
-        android:paddingVertical="10dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="25dp"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
@@ -21,14 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chụp Ảnh"
-            android:layout_marginTop="10dp"
-            android:textSize="20sp"
-            android:textColor="#000"/>
-        <TextView
-            android:id="@+id/txtAnhdachup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chọn ảnh đã chụp"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
             android:textColor="#000"/>
