--- a/app/src/main/res/layout/frag_chome.xml
+++ b/app/src/main/res/layout/frag_chome.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
             <ImageView
+                android:id="@+id/delchome"
                 android:layout_centerInParent="true"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
