--- a/app/src/main/res/layout/activity_picture_baby.xml
+++ b/app/src/main/res/layout/activity_picture_baby.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="center"
         android:paddingLeft="7dp"
         android:paddingRight="7dp"
-        android:background="#BAF2F3F8"
+        android:background="#fff"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/recycler_picturebaby"/>
