--- a/app/src/main/res/layout/picturebaby_row.xml
+++ b/app/src/main/res/layout/picturebaby_row.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="150dp"
     android:gravity="center"
     android:background="@drawable/custom_bgpicture"
     android:layout_margin="10dp"
@@ -8,15 +10,12 @@
     android:layout_gravity="center"
     android:layout_height="150dp">
 
-        <ImageView
-        android:background="@drawable/darius_image"
-        android:layout_gravity="center"
-        android:id="@+id/imgBeyeu"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/bb"/>
-
-
-
-
+        <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+            android:id="@+id/imgBeyeu"
+            android:layout_gravity="center"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:siShape="@drawable/shape_rounded_rectangle"
+            android:src="@drawable/bb"
+            app:siSquare="true"/>
 </LinearLayout>
